src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Spirits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Content_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Description</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>File__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>File</label>
        <referenceTo>File__c</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>High_Resolution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>High Resolution</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Content (High Resolution)</relationshipLabel>
        <relationshipName>Content1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Image_Resolution__c</fullName>
        <label>Image Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Followable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Followable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <label>LegacyID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matrix_type__c</fullName>
        <label>Matrix Type</label>
        <picklist>
            <picklistValues>
                <fullName>Program Execution Brief</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portfolio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RTS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TBA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TBA</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>All</fullName>
        <active>true</active>
        <label>All</label>
    </recordTypes>
    <recordTypes>
        <fullName>Collaboration</fullName>
        <active>true</active>
        <label>Collaboration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Low_Resolution</fullName>
        <active>true</active>
        <label>Low Resolution</label>
    </recordTypes>
    <recordTypes>
        <fullName>Performance_Management</fullName>
        <active>true</active>
        <label>Performance Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Planning</fullName>
        <active>true</active>
        <label>Planning</label>
    </recordTypes>
    <validationRules>
        <fullName>DescriptionRequired</fullName>
        <active>false</active>
        <description>Description is a required field</description>
        <errorConditionFormula>ISBLANK(Description)</errorConditionFormula>
        <errorDisplayField>Description</errorDisplayField>
        <errorMessage>Description is a required field</errorMessage>
    </validationRules>
</CustomObject>